k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devapp
  labels:
    app: devapp
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  
      
  selector:
    app: devapp
  type: LoadBalancer
