k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: devapp.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: devapp
            port:
              number: 80
